--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -637,12 +637,12 @@ section.lazy-placeholder:after {
 }
 .cid-rwOUlwEkR6 .navbar {
   padding: .5rem 0;
-  background: #232323;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rwOUlwEkR6 .navbar-dropdown.bg-color.transparent.opened {
-  background: #232323;
+  background: #ffffff;
 }
 .cid-rwOUlwEkR6 a {
   font-style: normal;
@@ -733,7 +733,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rwOUlwEkR6 .dropdown .dropdown-menu {
-  background: #232323;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -804,7 +804,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #218104;
+  background-color: #232323;
 }
 .cid-rwOUlwEkR6 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -881,11 +881,6 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
-}
-@media (min-width: 992px) {
-  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
 }
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
@@ -1267,31 +1262,47 @@ section.lazy-placeholder:after {
 .cid-s2eewjzuTi P {
   text-align: center;
 }
-.cid-rwJojhQM0O {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
+.cid-s3pfSfrnn1 {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.cid-rwJojhQM0O h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
+.cid-s3pfSfrnn1 .image-block {
+  margin: auto;
 }
-.cid-rwJojhQM0O p {
-  color: #767676;
-  text-align: left;
+.cid-s3pfSfrnn1 figcaption {
+  position: relative;
 }
-.cid-rwJojhQM0O .card-box {
-  padding-top: 2rem;
+.cid-s3pfSfrnn1 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
-.cid-rwJojhQM0O .card-wrapper {
-  height: 100%;
+@media (max-width: 768px) {
+  .cid-s3pfSfrnn1 .image-block {
+    width: 100% !important;
+  }
 }
-.cid-rwJojhQM0O .card-title {
-  text-align: center;
+.cid-s3pg3sQUMj {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 60px;
 }
-.cid-rwJojhQM0O P {
-  text-align: center;
+.cid-s3pg3sQUMj .image-block {
+  margin: auto;
+}
+.cid-s3pg3sQUMj figcaption {
+  position: relative;
+}
+.cid-s3pg3sQUMj figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s3pg3sQUMj .image-block {
+    width: 100% !important;
+  }
 }
 .cid-s2egzdZTB2 {
   background: #ffffff;
@@ -2431,11 +2442,6 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
-@media (min-width: 992px) {
-  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
 }
@@ -2917,11 +2923,6 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
-@media (min-width: 992px) {
-  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
 }
@@ -3126,5 +3127,460 @@ section.lazy-placeholder:after {
   background-color: #232323;
 }
 .cid-rwOTMrjJPQ .media-container-row .mbr-text {
+  color: #ffffff;
+}
+.cid-s3pgzOrq4k {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-s3pgzOrq4k .mbr-text,
+.cid-s3pgzOrq4k .mbr-section-btn {
+  color: #149dcc;
+  text-align: left;
+}
+.cid-s3pgzPrEUq {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s3pgzPrEUq .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s3pgzPrEUq H2 {
+  color: #232323;
+}
+.cid-s3pgzPYPvV {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-s3pgzPYPvV .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-s3pgzPYPvV .section-text {
+  padding: 2rem 0;
+  color: #1b160e;
+}
+.cid-s3pgzPYPvV .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s3pgzPYPvV .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-s3pgzR7GQe .navbar {
+  padding: .5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+}
+.cid-s3pgzR7GQe .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-s3pgzR7GQe a {
+  font-style: normal;
+}
+.cid-s3pgzR7GQe .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-s3pgzR7GQe .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-s3pgzR7GQe .nav-item:focus,
+.cid-s3pgzR7GQe .nav-link:focus {
+  outline: none;
+}
+.cid-s3pgzR7GQe .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-s3pgzR7GQe .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-s3pgzR7GQe .menu-logo {
+  margin-right: auto;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-s3pgzR7GQe .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-s3pgzR7GQe .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-s3pgzR7GQe .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-s3pgzR7GQe .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-s3pgzR7GQe .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-s3pgzR7GQe .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-s3pgzR7GQe .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-s3pgzR7GQe .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-s3pgzR7GQe .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-s3pgzR7GQe .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-s3pgzR7GQe .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-s3pgzR7GQe .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-s3pgzR7GQe .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-s3pgzR7GQe .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-s3pgzR7GQe .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-s3pgzR7GQe .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-s3pgzR7GQe .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-s3pgzR7GQe button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-s3pgzR7GQe button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-s3pgzR7GQe button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #232323;
+}
+.cid-s3pgzR7GQe button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-s3pgzR7GQe button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s3pgzR7GQe button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s3pgzR7GQe button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-s3pgzR7GQe nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s3pgzR7GQe nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-s3pgzR7GQe nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-s3pgzR7GQe nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s3pgzR7GQe .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-s3pgzR7GQe .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.collapsing,
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-s3pgzR7GQe .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-s3pgzR7GQe .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-s3pgzR7GQe .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-s3pgzR7GQe .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-s3pgzR7GQe .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-s3pgzR7GQe .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-s3pgzR7GQe .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-s3pgzR7GQe .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-s3pgzR7GQe img {
+    height: 3.8rem !important;
+  }
+  .cid-s3pgzR7GQe .btn {
+    display: -webkit-flex;
+  }
+  .cid-s3pgzR7GQe button.navbar-toggler {
+    display: block;
+  }
+  .cid-s3pgzR7GQe .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-s3pgzR7GQe .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse.collapsing,
+  .cid-s3pgzR7GQe .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse.collapsing .navbar-nav,
+  .cid-s3pgzR7GQe .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-s3pgzR7GQe .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s3pgzR7GQe .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse.collapsing .navbar-buttons,
+  .cid-s3pgzR7GQe .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-s3pgzR7GQe .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-s3pgzR7GQe .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-s3pgzR7GQe .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-s3pgzR7GQe .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-s3pgzR7GQe .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-s3pgzR7GQe .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s3pgzR7GQe .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-s3pgzR7GQe .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-s3pgzR7GQe .nav-link:hover,
+.cid-s3pgzR7GQe .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-s3pgzV0iAd {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #232323;
+}
+.cid-s3pgzV0iAd .media-container-row .mbr-text {
   color: #ffffff;
 }
