--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -630,19 +630,19 @@ section.lazy-placeholder:after {
 }
 .cid-rYa2L75v9R .mbr-section-subtitle {
   color: #fcff15;
-  text-align: right;
+  text-align: center;
 }
 .cid-rYa2L75v9R H2 {
   color: #ffffff;
 }
 .cid-rwOUlwEkR6 .navbar {
   padding: .5rem 0;
-  background: #ffffff;
+  background: #218104;
   transition: none;
   min-height: 77px;
 }
 .cid-rwOUlwEkR6 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #218104;
 }
 .cid-rwOUlwEkR6 a {
   font-style: normal;
@@ -733,7 +733,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rwOUlwEkR6 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #218104;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -804,7 +804,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #232323;
+  background-color: #218104;
 }
 .cid-rwOUlwEkR6 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -881,6 +881,11 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
@@ -1682,7 +1687,7 @@ section.lazy-placeholder:after {
   color: #465052;
 }
 .cid-ryzN14gpQ2 {
-  padding-top: 105px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -2442,6 +2447,11 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 992px) {
+  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
 }
@@ -2922,6 +2932,11 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
